compile_tests/no_display_no_impl.stderr
error[E0277]: `Error` doesn't implement `std::fmt::Display`
 --> compile_tests/no_display_no_impl.rs:3:17
  |
3 | #[derive(Debug, onlyerror::Error)]
  |                 ^^^^^^^^^^^^^^^^ `Error` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Error`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
note: required by a bound in `std::error::Error`
 --> $RUST/core/src/error.rs
  = note: this error originates in the derive macro `onlyerror::Error` (in Nightly builds, run with -Z macro-backtrace for more info)
